@@ -18,14 +18,14 @@ CFLAGS= $(INCLUDES) $(CFLAG)
 ERR=rsa
 ERRC=rsa_err
 GENERAL=Makefile
-TEST=
+TEST=rsa_oaep_test.c
 APPS=
 
 LIB=$(TOP)/libcrypto.a
 LIBSRC= rsa_eay.c rsa_gen.c rsa_lib.c rsa_sign.c rsa_saos.c $(ERRC).c \
-	rsa_pk1.c rsa_ssl.c rsa_none.c
+	rsa_pk1.c rsa_ssl.c rsa_none.c rsa_oaep.c
 LIBOBJ= rsa_eay.o rsa_gen.o rsa_lib.o rsa_sign.o rsa_saos.o $(ERRC).o \
-	rsa_pk1.o rsa_ssl.o rsa_none.o
+	rsa_pk1.o rsa_ssl.o rsa_none.o rsa_oaep.o
 
 SRC= $(LIBSRC)
 
